--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Save Web Form Data to Spreadsheets - Contact Form</title>
+<title>Nta Bar</title>
 <script src="https://code.jquery.com/jquery-3.6.0.js" 
 integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
 crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@ function SubForm (){
     <br/>
 	<br/>
     <br/>
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRjNpvYiL5gQgN41vvCZEyRwTcWOfu4lK-i6DwVutktjY3VY1ol4wvYbetrpfDOie40WBn3lqD7rysM/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRjNpvYiL5gQgN41vvCZEyRwTcWOfu4lK-i6DwVutktjY3VY1ol4wvYbetrpfDOie40WBn3lqD7rysM/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false;width="200";height="200""></iframe>
     <br/>
 </body>
 </html>
