--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ function SubForm (){
         data:$("#myForm").serializeArray(),
         success: function(){
           alert("Grazie per l'ordine, BONASE!")
+	"window.location.href=window.location.href"
         },
         error: function(){
           alert("Oh-oh qualcosa è andato storto vai da Vincenzo a riportare l'errore :(")
