--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
    <head>
    <link rel="stylesheet" href="mystyle.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
+	<meta http-equiv='pragma' content='no-cache'>
       <title>Nta Bar</title>
       <script src="https://code.jquery.com/jquery-3.6.0.js" 
          integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
